Fixed a bug that caused the footer to cut off the text on mobile devices

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -228,7 +228,7 @@ a:hover {
         height: 35% !important;
     }
     p.lead {
-        font-size: 128% !important;
+        font-size: 98% !important;
     }
     .footer {
         position: relative !important;
